thay tom modify

--- a/buoi3/click_buttun.html
+++ b/buoi3/click_buttun.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quis assumenda voluptatibus excepturi nostrum. Molestias inventore enim commodi atque ipsa, ratione perferendis, libero corporis maxime nemo distinctio repellendus non iure!</p>
 </body>
 </html>
